# JpegDecoder

./: .gitignore  .gitmodules  README.md
demo/: CMakeLists.txt  main.cpp
jpeg/: CMakeLists.txt
jpeg/include/: jpeg.hpp
jpeg/src/: CmakeLists.txt  decoder.cpp  decoder.hpp  huffman.cpp  huffman.hpp  image.cpp  image.hpp  markers.hpp  quantization.cpp  quantization.hpp  readers.cpp  readers.hpp  types.hpp  utils.hpp
